# software-testing-07-28-2015

./: .gitignore  LICENSE  README.md  SOFTWARE_TESTING_TALK.mkdwn  presentation.html  presentation.md
code/00-docktests/slide01/whoiMath/: __init__.py
code/00-doctests/slide00/: README.md
code/00-doctests/slide01/: README.md
code/00-doctests/slide01/whoiMath/: __init__.py
code/01-units/slide02/: README.md
code/01-units/slide02/whoiMath/: __init__.py  test_division.py
code/01-units/slide03/: README.md
code/01-units/slide03/whoiMath/: __init__.py
code/01-units/slide04/: README.md
code/01-units/slide04/whoiMath/: __init__.py
code/02-integration/slide06/whoiMath/: __init__.py
code/02-mock/slide05/: README.md
code/02-mock/slide05/whoiMath/: __init__.py  test_division.py  test_serial.py
code/03-integration/slide06/: README.md  setup.py
code/04-cpp/: CMakeLists.txt  README.md  whoiMath.cpp  whoiMath.h
code/04-cpp/tests/: CMakeLists.txt  test_WhoiMath_divide.cpp
code/integration/slide06/: setup.py
code/integration/slide06/whoiMath/: test_division.py  test_serial.py
code/units/slide00/whoiMath/: __init__.py
code/units/slide03/whoiMath/: test_division.py
code/units/slide04/whoiMath/: __init__.py  test_division.py
code3/05-qt/: README.md  test_whoiDialog.py  whoiDialog.py
code3/05-qt/ui/: ui_whoiDialog.py  whoiDialog.ui
reveal.js/css/theme/: whoi.css
reveal.js/css/theme/source/: whoi.scss
