FIND_PACKAGE(Threads REQUIRED)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/..
  /opt/gmock/gtest/include
  /opt/gmock/include
  )

SET(GTEST_FOUND TRUE)
ADD_LIBRARY(gtest IMPORTED STATIC GLOBAL)
SET_TARGET_PROPERTIES(gtest
  PROPERTIES
    "IMPORTED_LOCATION" "/opt/gmock/build/gtest/${CMAKE_STATIC_LIBRARY_PREFIX}gtest${CMAKE_STATIC_LIBRARY_SUFFIX}"
    "IMPORTED_LINK_INTERFACE_LIBRARIES" "${CMAKE_THREAD_LIBS_INIT}")

MACRO(ADD_GTEST TEST_NAME TEST_SOURCES)
  SET(${TEST_NAME}_SOURCES ${TEST_SOURCES})
  ADD_EXECUTABLE(${TEST_NAME} ${${TEST_NAME}_SOURCES})
  TARGET_LINK_LIBRARIES(${TEST_NAME} gtest WhoiMath)
  ADD_TEST(${TEST_NAME} ${TEST_NAME})
ENDMACRO(ADD_GTEST)

ADD_GTEST(test_division test_WhoiMath_divide.cpp)
